fixed the location of the Responsive elements

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/index.html
@@ -13,27 +13,30 @@
                         <use xlink:href="../svg/sprites.svg#logo"></use>
                     </svg>
                 </a>
-                <ul>
-                    <li class="list__item">
-                        <a class="phone__link">
-                            <svg class="call__image" width="12" height="16">
-                                <use xlink:href="../svg/sprites.svg#call-icon"></use>
-                            </svg>
-                            <span class="phone-text">+0880 1877576457</span>
-                        </a>
-                    </li>
-                </ul>
-                <button class="header__button-login" type="button">Sign In</button>
-                <button class="header__button-language" type="button">
-                    <svg class="language__earth-image" width="54" height="24">
-                        <use xlink:href="../svg/sprites.svg#earth-icon"></use>
-                    </svg>
-                </button>
+                <div class="wrapper-row wrapper-row__header">
+                    <ul>
+                        <li class="list__item">
+                            <a class="phone__link">
+                                <svg class="call__image" width="12" height="16">
+                                    <use xlink:href="../svg/sprites.svg#call-icon"></use>
+                                </svg>
+                                <span class="phone-text">+0880 1877576457</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <button class="header__button-login" type="button">Sign In</button>
+                    <button class="header__button-language" type="button">
+                        <svg class="language__earth-image" width="54" height="24">
+                            <use xlink:href="../svg/sprites.svg#earth-icon"></use>
+                        </svg>
+                    </button>
+                </div>
+
             </header>
             <main class="main-container">
                 <h1 class="visually-hidden">bonik delivery</h1>
                 <section class="content-row content-row__features">
-                    <article class="content-columns content-columns__features-desc">
+                    <div class="content-columns content-columns__features-desc">
                         <h2 class="features-desc__slogan-title">
                             Delivery is Process<br>Going From Source Point to Predefined Destination.
                         </h2>
@@ -45,7 +48,7 @@
                             </label>
                             <button class="search-parcel__button" type="submit">Track Percel</button>
                         </form>
-                    </article>
+                    </div>
                     <picture class="features__picture-delivery">
                         <source srcset="../png/bonik delivery img 1_2.png 2x">
                         <img src="../png/bonik delivery img 1.png" alt="bonik delivery photo 1">
@@ -58,78 +61,78 @@
                             from a source location to a predefined destination.</p>
                     </header>
                     <section class="index-column index-column__benefits">
-                        <article class="content-columns content-columns__benefits content-columns__benefits-cream">
+                        <div class="content-columns content-columns__benefits content-columns__benefits-cream">
                             <svg class="call__image" width="72" height="71">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_1"></use>
                             </svg>
                             <h3 class="benefits__title">Industry-leading tech</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-violet">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-violet">
                             <svg class="call__image" width="92" height="71">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_2"></use>
                             </svg>
                             <h3 class="benefits__title">Nationwide coverage</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-pink">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-pink">
                             <svg class="call__image" width="111" height="71">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_3"></use>
                             </svg>
                             <h3 class="benefits__title">Fastest Delivery</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-grey">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-grey">
                             <svg class="call__image" width="71" height="70">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_4"></use>
                             </svg>
                             <h3 class="benefits__title">Next day payment</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-yellow">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-yellow">
                             <svg class="call__image" width="92" height="70">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_5"></use>
                             </svg>
                             <h3 class="benefits__title">Best COD rates</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-cream">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-cream">
                             <svg class="call__image" width="65" height="72">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_6"></use>
                             </svg>
                             <h3 class="benefits__title">Secure handling</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-green">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-green">
                             <svg class="call__image" width="70" height="71">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_7"></use>
                             </svg>
                             <h3 class="benefits__title">Product insurance</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-pink">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-pink">
                             <svg class="call__image" width="72" height="73">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_8"></use>
                             </svg>
                             <h3 class="benefits__title">Verified Products</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
-                        <article class="content-columns content-columns__benefits content-columns__benefits-violet">
+                        </div>
+                        <div class="content-columns content-columns__benefits content-columns__benefits-violet">
                             <svg class="call__image" width="76" height="70">
                                 <use xlink:href="../svg/sprites.svg#feature-icon_9"></use>
                             </svg>
                             <h3 class="benefits__title">Realtime Monitoring</h3>
                             <p class="benefits__text">Delivery is process of transporting from source point to predefined
                                 destination.</p>
-                        </article>
+                        </div>
                     </section>
                 </section>
                 <section class="content-row content-row__ordering">
@@ -137,18 +140,18 @@
                         <source srcset="../png/bonik delivery img 2_2.png 2x">
                         <img src="../png/bonik%20delivery%20img%202%20.png" alt="bonik delivery photo 2">
                     </picture>
-                    <article class="content-columns content-columns__ordering-desc">
+                    <div class="content-columns content-columns__ordering-desc">
                         <h2 class="ordering-desc__slogan-title">
                             Apply for Ambassador</h2>
                         <p class="ordering-desc__slogan-text">Need to send something on time? Delivery is process of transporting goods from a source location to a predefined destination.</p>
                         <button class="ordering-desc__button-apply-now" type="button">Apply Now</button>
-                    </article>
+                    </div>
                 </section>
                 <section class="section__news">
                     <h2 class="news__headline">
                         Company News Our Latest Artical<br> & Tips for You
                     </h2>
-                    <div class="wrapper-row">
+                    <div class="wrapper-row wrapper-row__news">
                         <article class="content-columns content-columns__news">
                             <picture class="news__picture">
                                 <source srcset="../png/Rectangle 1_2x.png 2x">
