--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -26,10 +26,10 @@
                     <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
                     <br>
                     <br>
-                    <div class="page__track_inputfield">
+                    <form action="#" class="page__track_inputfield">
                         <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
                         <button type="button" class="page__track_inputfield-button">Track Parcel</button>
-                    </div>
+                    </form>
                 </div>
                 <picture class="page__bonik">
                     <source srcset="images/2x/bonik_left_2x.png 2x">
@@ -40,49 +40,51 @@
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
             <section class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group1.png" alt="Industry-leading tech">
+                    <div class="page__offers-block-img">
+                        <img src="images/1x/Group1.svg" alt="Industry-leading tech">
+                    </div>
                     <h2>Industry-leading tech</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group3.png" alt="Nationwide coverage">
+                    <img src="images/1x/Group2.svg" alt="Nationwide coverage" class="page__offers-block-img">
                     <h2>Nationwide coverage</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group2.png" alt="Fastest delivery">
+                    <img src="images/1x/Group3.svg" alt="Fastest delivery" class="page__offers-block-img">
                     <h2>Fastest delivery</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group4.png" alt="Next day payment">
+                    <img src="images/1x/Group4.svg" alt="Next day payment" class="page__offers-block-img">
                     <h2>Next day payment</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group5.png" alt="Best COD rated">
+                    <img src="images/1x/Group5.svg" alt="Best COD rated" class="page__offers-block-img">
                     <h2>Best COD rated</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group6.png" alt="Secure handling">
+                    <img src="images/1x/Group6.svg" alt="Secure handling" class="page__offers-block-img">
                     <h2>Secure handling</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-c">
-                    <img src="images/1x/Group8.png" alt="Product insurance">
+                    <img src="images/1x/Group7.svg" alt="Product insurance" class="page__offers-block-img">
                     <h2>Product insurance</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                </div>
+                <div class="page__offers-block page__offers-block-color-a">
+                    <img src="images/1x/Group8.svg" alt="Verified products" class="page__offers-block-img">
+                    <h2>Verified products</h2>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color-b">
-                    <img src="images/1x/Group9.png" alt="Verified products">
-                    <h2>Verified products</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
-                </div>
-                <div class="page__offers-block page__offers-block-color-a">
-                    <img src="images/1x/Group1.png" alt="Reatime Monitoring">
+                    <img src="images/1x/Group5.svg" alt="Reatime Monitoring" class="page__offers-block-img">
                     <h2>Reatime Monitoring</h2>
-                    <p>Delivery is process of transporting rom a source point to predefined destination</p>
+                    <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
             </section>
             <section class="page__apply">
@@ -171,9 +173,9 @@
                 </div>
             </section>
         </main>
-        <img src="images/1x/Group727.png" alt="" class="page__clients">
+        <img src="images/1x/our_clients.svg" alt="" class="page__clients">
         <footer class="page__bottom">
-            <img src="images/1x/Group733.png" alt="" class="page__bottom-image">
+            <img src="images/1x/bonik_bottom.svg" alt="" class="page__bottom-image">
             <div>
                 <ul class="page__bottom-list">Important Links</ul>
                 <li class="page__bottom-list-items">
@@ -205,6 +207,8 @@
                 </li>
             </div>
         </footer>
-        <div class="page-copyright">Copyright @2021 Bonik Delivery</div>
+        <div class="page__copyright">
+        <p>Copyright @2021 Bonik Delivery</p>
+        </div>
     </body>
 </html>
