added header withut logo

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -7,7 +7,18 @@
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
     <header class="header">
-
+        <div class="header__logo"></div>
+        <div class ="header__items">
+            <div class = "header__items-phone">
+                <img src="images/1x/Phone.svg" alt="">
+                <p>+088 01877576457</p>
+            </div>
+            <button type="button" class="header__items__button"><b>Sign In</b></button>
+            <div class="header__items-language">
+                <img src="images/1x/World.svg" alt="">
+                <p>EN</p>
+            </div>
+        </div>
     </header>
     <body>
         <main class="page">
