added hover effect

--- a/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
@@ -312,16 +312,16 @@
                         <div class="important-links__title">Important links</div>
                         <ul class="important-links__list">
                             <li class="important-links__item">
-                                <a href="">FAQs</a>
+                                <a href="" class="important-links__item-link">FAQs</a>
                             </li>
                             <li class="important-links__item">
-                                <a href=""></a>
+                                <a href="" class="important-links__item-link"></a>
                             </li>
                             <li class="important-links__item">
-                                <a href="">Privacy Policy</a>
+                                <a href="" class="important-links__item-link">Privacy Policy</a>
                             </li>
                             <li class="important-links__item">
-                                <a href="">Trims & Conditions</a>
+                                <a href="" class="important-links__item-link">Trims & Conditions</a>
                             </li>
                         </ul>
                     </div>
@@ -329,16 +329,16 @@
                         <div class="policy__title">Policy</div>
                         <ul class="policy__list">
                             <li class="policy__item">
-                                <a href="#">Learner</a>
+                                <a href="#" class="policy__item-link">Learner</a>
                             </li>
                             <li class="policy__item">
-                                <a href="#">Partners</a>
+                                <a href="#" class="policy__item-link">Partners</a>
                             </li>
                             <li class="policy__item">
-                                <a href="#">Developers</a>
+                                <a href="#" class="policy__item-link">Developers</a>
                             </li>
                             <li class="policy__item">
-                                <a href="#">Teaching Centre</a>
+                                <a href="#" class="policy__item-link">Teaching Centre</a>
                             </li>
                         </ul>
                     </div>
