--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -43,8 +43,8 @@
                     </form>
                 </div>
                 <picture class="page__bonik">
-                    <source srcset="images/2x/bonik_left_2x.png 2x">
-                    <img src="images/1x/bonik_left_1x.png" alt="bonik">
+                    <source srcset="images/2x/byke_leftway_2x.png 2x">
+                    <img src="images/1x/byke_leftway_1x.png" alt="bonik">
                 </picture>
             </section>
             <div class="page__title"><b>Why Choose Us?</b></div>
@@ -99,9 +99,9 @@
                 </div>
             </section>
             <section class="page__apply">
-                <picture class="page__bonik">
-                    <source srcset="images/2x/bonik_right_2x.png 2x">
-                    <img src="images/1x/bonik_right_1x.png" alt="bonik">
+                <picture class="page__bonik-left">
+                    <source srcset="images/2x/byke_rightway_2x.png 2x">
+                    <img src="images/1x/byke_rightway_1x.png" alt="bonik">
                 </picture>
                 <div class="page__apply-aside">
                     <h2 class="page__title">Apply for Ambassador</h2>
@@ -113,8 +113,8 @@
             <section class="page__news">
                 <div class="page__news-block">
                     <picture class="page__news-block-img">
-                        <source srcset="images/2x/Rectangle21_2x.png 2x">
-                        <img src="images/1x/Rectangle21.png" alt="laptop">
+                        <source srcset="images/2x/Laptop&Coffee_2x.png 2x">
+                        <img src="images/1x/Laptop&Coffee_1x.png" alt="laptop">
                     </picture>
                     <div class="page__news-block-signature">
                         UI/UX design
@@ -137,8 +137,8 @@
                 </div>
                 <div class="page__news-block">
                     <picture class="page__news-block-img">
-                        <source srcset="images/2x/Rectangle22_2x.png 2x">
-                        <img src="images/1x/Rectangle22.png" alt="laptop">
+                        <source srcset="images/2x/Laptop_2x.png 2x">
+                        <img src="images/1x/Laptop_1x.png" alt="laptop">
                     </picture>
                     <div class="page__news-block-signature">
                         Apps design
@@ -160,8 +160,8 @@
                 </div>
                 <div class="page__news-block">
                     <picture class="page__news-block-img">
-                        <source srcset="images/2x/Rectangle20_2x.png 2x">
-                        <img src="images/1x/Rectangle20.png" alt="Iphone">
+                        <source srcset="images/2x/Phone_2x.png 2x">
+                        <img src="images/1x/Phone_1x.png" alt="Iphone">
                     </picture>
                     <div class="page__news-block-signature">
                         Product experience
