--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -113,8 +113,8 @@
             <section class="page__news">
                 <div class="page__news-block">
                     <picture class="page__news-block-img">
-                        <source srcset="images/2x/Laptop&Coffee_2x.png 2x">
-                        <img src="images/1x/Laptop&Coffee_1x.png" alt="laptop">
+                        <source srcset="images/2x/Laptop-Coffee_2x.png 2x">
+                        <img src="images/1x/Laptop-Coffee_1x.png" alt="laptop">
                     </picture>
                     <div class="page__news-block-signature">
                         UI/UX design
