--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -7,15 +7,17 @@
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
     <header class="header">
-        <div class="header__logo"></div>
+        <div class="header__logo">
+            <img src="images/1x/logo.png" alt="logo">
+        </div>
         <div class ="header__items">
             <div class = "header__items-phone">
-                <img src="images/1x/Phone.svg" alt="">
+                <img src="images/1x/Phone.svg" alt="Phone">
                 <p>+088 01877576457</p>
             </div>
             <button type="button" class="header__items__button"><b>Sign In</b></button>
             <div class="header__items-language">
-                <img src="images/1x/World.svg" alt="">
+                <img src="images/1x/World.svg" alt="World">
                 <p>EN</p>
             </div>
         </div>
@@ -31,12 +33,8 @@
                     </div>
                     <div class="page__track_textfield-text-big"><b>Predefined Destination</b>
                     </div>
-                    <br>
-                    <br>
                     <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
                     <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
-                    <br>
-                    <br>
                     <form action="#" class="page__track_inputfield">
                         <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
                         <button type="button" class="page__track_inputfield-button">Track Parcel</button>
@@ -50,49 +48,49 @@
             <div class="page__title"><b>Why Choose Us?</b></div>
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
             <section class="page__offers">
-                <div class="page__offers-block page__offers-block-color-a">
+                <div class="page__offers-block page__offers-block-color--a">
                     <div class="page__offers-block-img">
                         <img src="images/1x/Group1.svg" alt="Industry-leading tech">
                     </div>
                     <h2>Industry-leading tech</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-b">
+                <div class="page__offers-block page__offers-block-color--b">
                     <img src="images/1x/Group2.svg" alt="Nationwide coverage" class="page__offers-block-img">
                     <h2>Nationwide coverage</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-c">
+                <div class="page__offers-block page__offers-block-color--c">
                     <img src="images/1x/Group3.svg" alt="Fastest delivery" class="page__offers-block-img">
                     <h2>Fastest delivery</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-b">
+                <div class="page__offers-block page__offers-block-color--b">
                     <img src="images/1x/Group4.svg" alt="Next day payment" class="page__offers-block-img">
                     <h2>Next day payment</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-c">
+                <div class="page__offers-block page__offers-block-color--c">
                     <img src="images/1x/Group5.svg" alt="Best COD rated" class="page__offers-block-img">
                     <h2>Best COD rated</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-a">
+                <div class="page__offers-block page__offers-block-color--a">
                     <img src="images/1x/Group6.svg" alt="Secure handling" class="page__offers-block-img">
                     <h2>Secure handling</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-c">
+                <div class="page__offers-block page__offers-block-color--c">
                     <img src="images/1x/Group7.svg" alt="Product insurance" class="page__offers-block-img">
                     <h2>Product insurance</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-a">
+                <div class="page__offers-block page__offers-block-color--a">
                     <img src="images/1x/Group8.svg" alt="Verified products" class="page__offers-block-img">
                     <h2>Verified products</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color-b">
+                <div class="page__offers-block page__offers-block-color--b">
                     <img src="images/1x/Group5.svg" alt="Reatime Monitoring" class="page__offers-block-img">
                     <h2>Reatime Monitoring</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
@@ -129,8 +127,7 @@
                     <div class="page__news-block-big">
                         <b>business through design</b>
                     </div>
-                    <article class="page__news-block-text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</article>
-                    <br>
+                    <p class="page__news-block-text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
@@ -153,7 +150,7 @@
                     <div class="page__news-block-big">
                         <b>course to learn how to use your app.</b>
                     </div>
-                    <article class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</article>
+                    <p class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
@@ -176,15 +173,14 @@
                     <div class="page__news-block-big">
                         <b>product experience</b>
                     </div>
-                    <article class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</article>
-                    <br>
+                    <p class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
                 </div>
             </section>
         </main>
-        <img src="images/1x/our_clients.svg" alt="" class="page__clients">
+        <img src="images/1x/our_clients.svg" alt="Our_Clients" class="page__clients">
         <footer class="page__bottom">
             <img src="images/1x/bonik_bottom.svg" alt="" class="page__bottom-image">
             <div>
