--- a/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
@@ -15,13 +15,19 @@
                 <img src="images/bonik_delivery_logo.svg" alt="bonik delivery logo">
             </div>
             <div class="header__info">
-                <img src="images/Phone.svg" alt="Phone">
                 <div class="header__info-number-phone">
-                    <input class="header__info-number-phone_input" type="tel" value="+088 01877576457" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                    <svg class="phone">
+                        <use xlink:href="#phone"></use>
+                    </svg>
+                    <a class="header__info-number-phone_input" href="tel:+08801877576457">
+                        +08801877576457
+                    </a>
                 </div>
-                <div class="header__info_btn">Sign In</div>
+                <button type="button" class="header__info_btn">Sign In</button>
                 <div class="header__info-language">
-                    <img src="images/globus.svg" alt="language">
+                    <svg class="globus">
+                        <use xlink:href="#globus"></use>
+                    </svg>
                     <p class="header__info-language-change">EN</p>
                 </div>
             </div>
@@ -130,8 +136,8 @@
                         <div class="card__product">
                             <p class="card__product_text">UI / UX Design</p>
                             <div class="card__product_views">
-                                <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M17.8912 5.54375C16.1965 2.23719 12.8415 0 8.99998 0C5.15842 0 1.80248 2.23875 0.108733 5.54406C0.037246 5.68547 0 5.8417 0 6.00016C0 6.15861 0.037246 6.31484 0.108733 6.45625C1.80342 9.76281 5.15842 12 8.99998 12C12.8415 12 16.1975 9.76125 17.8912 6.45594C17.9627 6.31453 18 6.1583 18 5.99984C18 5.84139 17.9627 5.68516 17.8912 5.54375ZM8.99998 10.5C8.10997 10.5 7.23994 10.2361 6.49992 9.74161C5.7599 9.24715 5.18312 8.54434 4.84253 7.72208C4.50193 6.89981 4.41282 5.99501 4.58645 5.12209C4.76008 4.24918 5.18867 3.44736 5.818 2.81802C6.44734 2.18868 7.24916 1.7601 8.12208 1.58647C8.99499 1.41283 9.89979 1.50195 10.7221 1.84254C11.5443 2.18314 12.2471 2.75991 12.7416 3.49993C13.2361 4.23995 13.5 5.10998 13.5 6C13.5003 6.59103 13.3841 7.17632 13.158 7.72242C12.932 8.26851 12.6005 8.7647 12.1826 9.18262C11.7647 9.60054 11.2685 9.932 10.7224 10.158C10.1763 10.3841 9.59101 10.5003 8.99998 10.5ZM8.99998 3C8.73221 3.00374 8.46617 3.04358 8.20905 3.11844C8.42099 3.40646 8.5227 3.7609 8.49572 4.11748C8.46875 4.47406 8.31487 4.80917 8.06201 5.06203C7.80915 5.31489 7.47405 5.46876 7.11747 5.49574C6.76088 5.52271 6.40644 5.42101 6.11842 5.20906C5.95441 5.81331 5.98402 6.45377 6.20307 7.04031C6.42213 7.62685 6.8196 8.12993 7.33955 8.47874C7.8595 8.82754 8.47574 9.00452 9.10153 8.98475C9.72733 8.96498 10.3312 8.74946 10.8281 8.36853C11.325 7.9876 11.6899 7.46044 11.8715 6.86125C12.0531 6.26205 12.0422 5.62099 11.8404 5.0283C11.6386 4.43561 11.256 3.92114 10.7464 3.55728C10.2369 3.19343 9.62609 2.99853 8.99998 3Z" fill="#666666"></path>
+                                <svg class="eye">
+                                    <use xlink:href="#eye"></use>
                                 </svg>
                                 <p class="card__product_text">12450</p>
                             </div>
@@ -143,10 +149,9 @@
                             <p class="card__paragraph">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
                         </div>
                         <div class="card__learn-more">
-                            <p class="card__learn-more_link">Learn More</p>
-                            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8H17" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M10 1L17 8L10 15" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
+                            <svg class="arrow">
+                                <use xlink:href="#arrow"></use>
                             </svg>
                         </div>
                     </div>
@@ -158,8 +163,8 @@
                         <div class="card__product">
                             <p class="card__product_text">Apps Design</p>
                             <div class="card__product_views">
-                                <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M17.8912 5.54375C16.1965 2.23719 12.8415 0 8.99998 0C5.15842 0 1.80248 2.23875 0.108733 5.54406C0.037246 5.68547 0 5.8417 0 6.00016C0 6.15861 0.037246 6.31484 0.108733 6.45625C1.80342 9.76281 5.15842 12 8.99998 12C12.8415 12 16.1975 9.76125 17.8912 6.45594C17.9627 6.31453 18 6.1583 18 5.99984C18 5.84139 17.9627 5.68516 17.8912 5.54375ZM8.99998 10.5C8.10997 10.5 7.23994 10.2361 6.49992 9.74161C5.7599 9.24715 5.18312 8.54434 4.84253 7.72208C4.50193 6.89981 4.41282 5.99501 4.58645 5.12209C4.76008 4.24918 5.18867 3.44736 5.818 2.81802C6.44734 2.18868 7.24916 1.7601 8.12208 1.58647C8.99499 1.41283 9.89979 1.50195 10.7221 1.84254C11.5443 2.18314 12.2471 2.75991 12.7416 3.49993C13.2361 4.23995 13.5 5.10998 13.5 6C13.5003 6.59103 13.3841 7.17632 13.158 7.72242C12.932 8.26851 12.6005 8.7647 12.1826 9.18262C11.7647 9.60054 11.2685 9.932 10.7224 10.158C10.1763 10.3841 9.59101 10.5003 8.99998 10.5ZM8.99998 3C8.73221 3.00374 8.46617 3.04358 8.20905 3.11844C8.42099 3.40646 8.5227 3.7609 8.49572 4.11748C8.46875 4.47406 8.31487 4.80917 8.06201 5.06203C7.80915 5.31489 7.47405 5.46876 7.11747 5.49574C6.76088 5.52271 6.40644 5.42101 6.11842 5.20906C5.95441 5.81331 5.98402 6.45377 6.20307 7.04031C6.42213 7.62685 6.8196 8.12993 7.33955 8.47874C7.8595 8.82754 8.47574 9.00452 9.10153 8.98475C9.72733 8.96498 10.3312 8.74946 10.8281 8.36853C11.325 7.9876 11.6899 7.46044 11.8715 6.86125C12.0531 6.26205 12.0422 5.62099 11.8404 5.0283C11.6386 4.43561 11.256 3.92114 10.7464 3.55728C10.2369 3.19343 9.62609 2.99853 8.99998 3Z" fill="#666666"></path>
+                                <svg class="eye">
+                                    <use xlink:href="#eye"></use>
                                 </svg>
                                 <p class="card__product_text">2953</p>
                             </div>
@@ -171,10 +176,9 @@
                             <p class="card__paragraph">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
                         </div>
                         <div class="card__learn-more">
-                            <p class="card__learn-more_link">Learn More</p>
-                            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8H17" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M10 1L17 8L10 15" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
+                            <svg class="arrow">
+                                <use xlink:href="#arrow"></use>
                             </svg>
                         </div>
                     </div>
@@ -186,8 +190,8 @@
                         <div class="card__product">
                             <p class="card__product_text">Product Experience</p>
                             <div class="card__product_views">
-                                <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M17.8912 5.54375C16.1965 2.23719 12.8415 0 8.99998 0C5.15842 0 1.80248 2.23875 0.108733 5.54406C0.037246 5.68547 0 5.8417 0 6.00016C0 6.15861 0.037246 6.31484 0.108733 6.45625C1.80342 9.76281 5.15842 12 8.99998 12C12.8415 12 16.1975 9.76125 17.8912 6.45594C17.9627 6.31453 18 6.1583 18 5.99984C18 5.84139 17.9627 5.68516 17.8912 5.54375ZM8.99998 10.5C8.10997 10.5 7.23994 10.2361 6.49992 9.74161C5.7599 9.24715 5.18312 8.54434 4.84253 7.72208C4.50193 6.89981 4.41282 5.99501 4.58645 5.12209C4.76008 4.24918 5.18867 3.44736 5.818 2.81802C6.44734 2.18868 7.24916 1.7601 8.12208 1.58647C8.99499 1.41283 9.89979 1.50195 10.7221 1.84254C11.5443 2.18314 12.2471 2.75991 12.7416 3.49993C13.2361 4.23995 13.5 5.10998 13.5 6C13.5003 6.59103 13.3841 7.17632 13.158 7.72242C12.932 8.26851 12.6005 8.7647 12.1826 9.18262C11.7647 9.60054 11.2685 9.932 10.7224 10.158C10.1763 10.3841 9.59101 10.5003 8.99998 10.5ZM8.99998 3C8.73221 3.00374 8.46617 3.04358 8.20905 3.11844C8.42099 3.40646 8.5227 3.7609 8.49572 4.11748C8.46875 4.47406 8.31487 4.80917 8.06201 5.06203C7.80915 5.31489 7.47405 5.46876 7.11747 5.49574C6.76088 5.52271 6.40644 5.42101 6.11842 5.20906C5.95441 5.81331 5.98402 6.45377 6.20307 7.04031C6.42213 7.62685 6.8196 8.12993 7.33955 8.47874C7.8595 8.82754 8.47574 9.00452 9.10153 8.98475C9.72733 8.96498 10.3312 8.74946 10.8281 8.36853C11.325 7.9876 11.6899 7.46044 11.8715 6.86125C12.0531 6.26205 12.0422 5.62099 11.8404 5.0283C11.6386 4.43561 11.256 3.92114 10.7464 3.55728C10.2369 3.19343 9.62609 2.99853 8.99998 3Z" fill="#666666"></path>
+                                <svg class="eye">
+                                    <use xlink:href="#eye"></use>
                                 </svg>
                                 <p class="card__product_text">7980</p>
                             </div>
@@ -199,17 +203,16 @@
                             <p class="card__paragraph">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
                         </div>
                         <div class="card__learn-more">
-                            <p class="card__learn-more_link">Learn More</p>
-                            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8H17" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M10 1L17 8L10 15" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <a class="card__learn-more_link" href="#Learn">Learn More</a>
+                            <svg class="arrow">
+                                <use xlink:href="#arrow"></use>
                             </svg>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="our-clients">
-                <div class="main__our-clients_head">
+                <div class="our-clients__information">
                     <h3 class="main__text-head main__text-head--position-head">Our Clients</h3>
                 </div>
                 <div class="our-clients__logos">
@@ -380,6 +383,27 @@
                     <path d="M65.0109 9.99982H71.2074V29.9986H66.6155V16.5495L60.7413 29.9981L54.5589 16.5326V29.9981H50.2747V9.99932H56.399L60.8148 20.3506L65.0109 9.99982ZM73.4908 9.99982V29.9986H85.0301V26.6082H77.9641V21.5199H84.7378V18.0978H77.9641V13.5096H85.0301V9.99982H73.4908ZM102.24 20.0027C102.24 27.4468 110.01 33.4041 118.196 29.4195V25.1349C111.897 29.5477 106.413 25.1248 106.503 20.1736C106.565 16.883 108.776 13.7534 113.054 13.5096C115.157 13.3902 116.582 13.913 118.196 15.4579V11.0023C112.281 7.49733 102.24 11.3552 102.24 20.0027ZM120.084 29.9983H124.337V10.1922H120.084V29.9983ZM129.674 19.2742L136.102 10.2359H131.134L124.766 19.2573L132.159 29.9983H137.037L129.674 19.2742Z" fill="#231F20"></path>
                     <path d="M87.0183 9.99927V29.998H91.5073V19.2539L98.9277 29.998H103.713L97.8384 21.6009C100.561 20.5714 101.444 18.2886 101.444 16.0067C101.444 13.7271 99.5303 9.99952 94.8939 9.99952L87.0183 9.99927ZM91.5073 13.3275H93.4668C96.7796 13.3275 96.9563 15.493 96.9563 16.3018C96.9563 17.8468 95.6454 19.1625 93.9535 19.1625H91.5073V13.3275Z" fill="#231F20"></path>
                     <path d="M9.99937 10.0001C9.99937 4.47687 14.4772 0 19.9995 0C25.5238 0 29.9999 4.47687 29.9999 10.0001H9.99937ZM9.99937 29.9999C9.99937 24.4774 14.4772 19.9995 19.9995 19.9995C14.4772 19.9995 9.99937 15.5236 9.99937 10.0001C4.47687 10.0001 0 14.4772 0 19.9995C0 25.5238 4.47687 29.9999 9.99937 29.9999ZM9.99937 29.9999C9.99937 35.5241 14.4772 40 19.9995 40C25.5238 40 29.9999 35.5241 29.9999 29.9999H9.99937ZM19.9995 19.9995C25.5238 19.9995 29.9999 24.4774 29.9999 29.9999C35.5231 29.9999 40.001 25.524 40.001 19.9995C40.001 14.4772 35.5231 10.0001 29.9999 10.0001C29.9999 15.5236 25.524 19.9995 19.9995 19.9995Z" fill="#007A73"></path>
+                </g>
+            </symbol>
+            <symbol id="phone" width="12" height="16" viewBox="0 0 12 16">
+                <g>
+                    <path d="M1.86633 0.46705L3.1574 0.0777966C3.58349 -0.0504663 4.0417 -0.0193459 4.44654 0.165353C4.85138 0.350051 5.17521 0.675714 5.35761 1.08159L6.26276 3.09451C6.41986 3.44372 6.46365 3.83337 6.38798 4.20874C6.31231 4.5841 6.12098 4.92635 5.84085 5.18742L4.46313 6.47116C4.2785 6.64645 4.41847 7.32965 5.093 8.49874C5.7682 9.6685 6.29009 10.1311 6.53071 10.0591L8.33567 9.5072C8.70154 9.39529 9.09325 9.40067 9.4559 9.5226C9.81856 9.64452 10.134 9.87686 10.3579 10.1871L11.6443 11.97C11.9042 12.3301 12.0245 12.7722 11.9829 13.2142C11.9414 13.6563 11.7408 14.0682 11.4184 14.3735L10.4239 15.3153C10.1029 15.6194 9.70695 15.8328 9.27651 15.9338C8.84607 16.0349 8.39653 16.02 7.97375 15.8906C5.89017 15.2527 3.96057 13.3597 2.15893 10.2384C0.353304 7.11236 -0.328557 4.47556 0.14668 2.32134C0.24253 1.88726 0.45241 1.4866 0.754686 1.16066C1.05696 0.834718 1.44069 0.595288 1.86633 0.46705Z"></path>
+                </g>
+            </symbol>
+            <symbol id="globus" width="21" height="20" viewBox="0 0 21 20">
+                <g>
+                    <path d="M15.351 12C15.431 11.34 15.491 10.68 15.491 10C15.491 9.32 15.431 8.66 15.351 8H18.731C18.891 8.64 18.991 9.31 18.991 10C18.991 10.69 18.891 11.36 18.731 12H15.351ZM13.581 17.56C14.181 16.45 14.641 15.25 14.961 14H17.911C16.9421 15.6683 15.4051 16.932 13.581 17.56ZM13.331 12H8.65097C8.55097 11.34 8.49097 10.68 8.49097 10C8.49097 9.32 8.55097 8.65 8.65097 8H13.331C13.421 8.65 13.491 9.32 13.491 10C13.491 10.68 13.421 11.34 13.331 12ZM10.991 17.96C10.161 16.76 9.49097 15.43 9.08097 14H12.901C12.491 15.43 11.821 16.76 10.991 17.96ZM6.99097 6H4.07097C5.02982 4.32721 6.56576 3.06149 8.39097 2.44C7.79097 3.55 7.34097 4.75 6.99097 6ZM4.07097 14H6.99097C7.34097 15.25 7.79097 16.45 8.39097 17.56C6.56959 16.9317 5.03581 15.6677 4.07097 14ZM3.25097 12C3.09097 11.36 2.99097 10.69 2.99097 10C2.99097 9.31 3.09097 8.64 3.25097 8H6.63097C6.55097 8.66 6.49097 9.32 6.49097 10C6.49097 10.68 6.55097 11.34 6.63097 12H3.25097ZM10.991 2.03C11.821 3.23 12.491 4.57 12.901 6H9.08097C9.49097 4.57 10.161 3.23 10.991 2.03ZM17.911 6H14.961C14.648 4.76146 14.1845 3.5659 13.581 2.44C15.421 3.07 16.951 4.34 17.911 6ZM10.991 0C5.46097 0 0.990967 4.5 0.990967 10C0.990967 12.6522 2.04454 15.1957 3.9199 17.0711C4.84848 17.9997 5.95088 18.7362 7.16413 19.2388C8.37739 19.7413 9.67775 20 10.991 20C13.6431 20 16.1867 18.9464 18.062 17.0711C19.9374 15.1957 20.991 12.6522 20.991 10C20.991 8.68678 20.7323 7.38642 20.2298 6.17317C19.7272 4.95991 18.9906 3.85752 18.062 2.92893C17.1334 2.00035 16.0311 1.26375 14.8178 0.761205C13.6045 0.258658 12.3042 0 10.991 0Z"></path>
+                </g>
+            </symbol>
+            <symbol id="eye" width="18" height="12" viewBox="0 0 18 12">
+                <g>
+                    <path d="M17.8912 5.54375C16.1965 2.23719 12.8415 0 8.99998 0C5.15842 0 1.80248 2.23875 0.108733 5.54406C0.037246 5.68547 0 5.8417 0 6.00016C0 6.15861 0.037246 6.31484 0.108733 6.45625C1.80342 9.76281 5.15842 12 8.99998 12C12.8415 12 16.1975 9.76125 17.8912 6.45594C17.9627 6.31453 18 6.1583 18 5.99984C18 5.84139 17.9627 5.68516 17.8912 5.54375ZM8.99998 10.5C8.10997 10.5 7.23994 10.2361 6.49992 9.74161C5.7599 9.24715 5.18312 8.54434 4.84253 7.72208C4.50193 6.89981 4.41282 5.99501 4.58645 5.12209C4.76008 4.24918 5.18867 3.44736 5.818 2.81802C6.44734 2.18868 7.24916 1.7601 8.12208 1.58647C8.99499 1.41283 9.89979 1.50195 10.7221 1.84254C11.5443 2.18314 12.2471 2.75991 12.7416 3.49993C13.2361 4.23995 13.5 5.10998 13.5 6C13.5003 6.59103 13.3841 7.17632 13.158 7.72242C12.932 8.26851 12.6005 8.7647 12.1826 9.18262C11.7647 9.60054 11.2685 9.932 10.7224 10.158C10.1763 10.3841 9.59101 10.5003 8.99998 10.5ZM8.99998 3C8.73221 3.00374 8.46617 3.04358 8.20905 3.11844C8.42099 3.40646 8.5227 3.7609 8.49572 4.11748C8.46875 4.47406 8.31487 4.80917 8.06201 5.06203C7.80915 5.31489 7.47405 5.46876 7.11747 5.49574C6.76088 5.52271 6.40644 5.42101 6.11842 5.20906C5.95441 5.81331 5.98402 6.45377 6.20307 7.04031C6.42213 7.62685 6.8196 8.12993 7.33955 8.47874C7.8595 8.82754 8.47574 9.00452 9.10153 8.98475C9.72733 8.96498 10.3312 8.74946 10.8281 8.36853C11.325 7.9876 11.6899 7.46044 11.8715 6.86125C12.0531 6.26205 12.0422 5.62099 11.8404 5.0283C11.6386 4.43561 11.256 3.92114 10.7464 3.55728C10.2369 3.19343 9.62609 2.99853 8.99998 3Z" fill="#666666"></path>
+                </g>
+            </symbol>
+            <symbol id="arrow" width="18" height="16" viewBox="0 0 18 16">
+                <g>
+                    <path d="M1 8H17" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M10 1L17 8L10 15" stroke="#29DBCC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                 </g>
             </symbol>
         </svg>
